add journal entry form fully functional. Journal page incorporated into get_entries function and paths & links updated

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,7 +30,7 @@
             <div class="collapse navbar-collapse black" id="navMenu">
                 <ul class="navbar-nav m-auto">
                     <li class="nav-item mx-3">
-                        <a href="{{ url_for('site.journal') }}" class="nav-link">Journal</a>
+                        <a href="{{ url_for('api.get_entries') }}" class="nav-link">Journal</a>
                     </li>
                 </ul>
             </div>
