--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,6 +1,6 @@
-* {
+/* * {
     border: 1px solid red;
-}
+} */
 html, body {
     color: aliceblue;
     background-color: #123E45;
@@ -42,4 +42,8 @@ nav {
     position: fixed;
     bottom: 10px;
     right: 10px;
+}
+
+.journal-entry{
+    background: rgba(222, 222, 222, 0.5);
 }
